<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>uk.ac.man.cs</groupId>
  <artifactId>Pareidolia</artifactId>
  <packaging>jar</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>Pareidolia</name>
  <url>http://maven.apache.org</url>


  <dependencies> 

    <dependency>
    <groupId>org.slf4j</groupId>
    <artifactId>slf4j-jdk14</artifactId>
    <version>1.7.25</version>
</dependency>


        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.5.0-M1</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>net.sourceforge.owlapi</groupId>
            <artifactId>owlapi-distribution</artifactId>
            <version>5.1.2</version>
        </dependency>

        <dependency>
            <groupId>net.sourceforge.owlapi</groupId>
            <artifactId>org.semanticweb.hermit</artifactId>
            <version>1.3.8.500</version>
            <exclusions>
                <exclusion>
                    <groupId>net.sourceforge.owlapi</groupId>
                    <artifactId>owlapi-distribution</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>net.sourceforge.owlapi</groupId>
                    <artifactId>owlapi-impl</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>net.sourceforge.owlapi</groupId>
                    <artifactId>owlapi-apibinding</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.semanticweb.elk</groupId>
            <artifactId>elk-owlapi</artifactId>
            <version>0.4.3</version>
        </dependency>

        <dependency>
            <groupId>com.opencsv</groupId>
            <artifactId>opencsv</artifactId>
            <version>4.0</version>
        </dependency>


  </dependencies>

  <!-- This gets rid of errors when using plugin update check -->
  <!-- <prerequisites>
    <maven>3.6.0</maven>
  </prerequisites>  -->

  <build> 
      <plugins> 
          <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-enforcer-plugin</artifactId>
              <version>3.0.0-M2</version>
              <executions>
                  <execution>
                      <id>enforce-maven</id>
                      <goals>
                          <goal>enforce</goal>
                      </goals>
                      <configuration>
                          <rules>
                              <requireMavenVersion>
                                  <version>3.6.0</version>
                              </requireMavenVersion>
                          </rules>
                      </configuration>
                  </execution>
              </executions>
          </plugin> 

          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>3.0.0</version>
        </plugin>

          <plugin>
              <groupId>org.codehaus.mojo</groupId>
              <artifactId>versions-maven-plugin</artifactId>
              <version>2.7</version>
              <configuration>
                  <generateBackupPoms>false</generateBackupPoms>
              </configuration>
          </plugin>
          <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
          <plugin>
              <artifactId>maven-clean-plugin</artifactId>
              <version>3.1.0</version>
          </plugin>
          <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
          <plugin>
              <artifactId>maven-resources-plugin</artifactId>
              <version>3.1.0</version>
                      <configuration>
                <encoding>UTF-8</encoding>
                      </configuration>
          </plugin>
          <plugin>
              <artifactId>maven-compiler-plugin</artifactId>
              <version>3.8.1</version>
              <configuration>
                  <release>11</release>
                <encoding>UTF-8</encoding>
              </configuration>
          </plugin>
          <plugin>
              <artifactId>maven-jar-plugin</artifactId>
              <version>3.1.2</version>
          </plugin>
          <plugin>
              <artifactId>maven-install-plugin</artifactId>
              <version>3.0.0-M1</version>
          </plugin>
          <plugin>
              <artifactId>maven-deploy-plugin</artifactId>
              <version>3.0.0-M1</version>
          </plugin>
          <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
          <plugin>
              <artifactId>maven-site-plugin</artifactId>
              <version>3.7.1</version>
          </plugin>
          <plugin>
              <artifactId>maven-project-info-reports-plugin</artifactId>
              <version>3.0.0</version>
          </plugin>

        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
             <version>3.0.0-M3</version>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                    </argLine>
                </configuration>
            <!-- <version>3.0.0-M3</version> -->
        </plugin>

        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-failsafe-plugin</artifactId>
             <version>3.0.0-M3</version>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                    </argLine>
                </configuration>
            <!-- <version>3.0.0-M3</version> -->
        </plugin>

      </plugins> 
  </build> 

</project>
